# artalk-streamlit-realtime

./: .gitignore  AGENTS.md  README.md  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
artalk_streamlit_realtime/: __init__.py  assets.py  config.py  diagnostics.py  gc_probe.py  openai_bridge.py  runtime.py  silence.py
docs/: realtime-performance-notes.md
scripts/: activate_runtime.sh  install_runtime.sh  run_app.sh
