[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "artalk-streamlit-realtime"
version = "0.1.0"
description = "Standalone Streamlit realtime demo for packaged ARTalk and GAGAvatar"
requires-python = ">=3.10"
dependencies = [
  "artalk",
  "av",
  "gagavatar",
  "numpy",
  "openai",
  "streamlit",
  "streamlit-webrtc>=0.72.2",
]

[dependency-groups]
dev = [
  "streamlit-remote>=0.5.0",
]

[tool.setuptools]
py-modules = ["streamlit_app"]
packages = ["artalk_streamlit_realtime"]

[tool.artalk.assets]
root = "assets"
